# TinyTextEditor

./: AppendBuffer.cpp  AppendBuffer.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  Escape.h  KeyPress.h  KeyPressDetector.cpp  Settings.h  SpecialKey.h  Terminal.cpp  Terminal.h  main.cpp  utils.h
examples/: file1.txt  file2_manyLines.txt  file3_tabs.txt
